javadoc and optimizations EVERYWHERE